--- a/app/src/main/res/layout/item_share_request.xml
+++ b/app/src/main/res/layout/item_share_request.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,42 +5,44 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
+    <ImageButton
+        android:id="@+id/downloadIcon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="Download"
+        android:src="@drawable/download_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
-        android:id="@+id/senderTextView"
+        android:id="@+id/deviceTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Sender"
-        android:textAppearance="?attr/textAppearanceBody1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/downloadButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:fontFamily="sans-serif-medium"
+        android:text="Johnathan's Phone"
+        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textColor="@android:color/black"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/downloadIcon"
+        app:layout_constraintTop_toTopOf="parent"
+       />
+
 
     <TextView
         android:id="@+id/fileTypeTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="File Type"
-        android:textAppearance="?attr/textAppearanceBody2"
-        app:layout_constraintTop_toBottomOf="@id/senderTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/downloadButton" />
-
-    <TextView
-        android:id="@+id/timestampTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Timestamp"
-        android:textAppearance="?attr/textAppearanceBody2"
-        app:layout_constraintTop_toBottomOf="@id/fileTypeTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/downloadButton" />
-
-    <Button
-        android:id="@+id/downloadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Download"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif"
+        android:text="Homework01.pdf"
+        android:textAppearance="?attr/textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/deviceTextView"
+        app:layout_constraintTop_toBottomOf="@id/deviceTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
