--- a/app/src/main/res/layout/item_share_request.xml
+++ b/app/src/main/res/layout/item_share_request.xml
@@ -31,6 +31,18 @@
         app:layout_constraintTop_toTopOf="parent"
        />
 
+    <ImageButton
+        android:id="@+id/deleteButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/delete"
+        android:contentDescription="@string/delete_request"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp" />
+
 
     <TextView
         android:id="@+id/fileTypeTextView"
@@ -45,4 +57,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/deviceTextView"
         app:layout_constraintTop_toBottomOf="@id/deviceTextView" />
+
+    <TextView
+        android:id="@+id/timestampTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Timestamp"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@id/deviceTextView"
+        app:layout_constraintTop_toBottomOf="@id/fileTypeTextView"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
