--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.send.SendActivity" >
+    tools:context=".ui.send.SendActivity">
 
     <RelativeLayout
+        android:id="@+id/page_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/page_title">
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
-            android:text="SEND PAGE"
+            android:layout_marginTop="10dp"
+            android:text="@string/send_page_title"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -25,8 +24,8 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
         android:id="@+id/search_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/page_title"
         android:layout_marginTop="5dp">
@@ -37,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="start"
-            android:hint="UserName"
+            android:hint="@string/username"
             android:padding="10dp"
             android:textSize="20sp"
             tools:ignore="TouchTargetSizeCheck" />
@@ -46,21 +45,21 @@
             android:id="@+id/searchicon_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignEnd="@id/username_input"
             android:layout_centerVertical="true"
-            android:layout_alignRight="@id/username_input"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="fitCenter"
             android:src="@drawable/searchicon"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </RelativeLayout>
-    
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/users_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/users_RecyclerView"
-        android:padding="10dp"
-        android:layout_below="@+id/search_bar">
+        android:layout_below="@+id/search_bar"
+        android:padding="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
