feat: Add functionality to change username button

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -28,5 +28,8 @@
         <Preference
             android:key="changePfp"
             android:title="Change Profile Picture"/>
+        <Preference
+            android:key="deleteAccount"
+            android:title="Delete Account"/>
     </PreferenceCategory>
 </PreferenceScreen>
