--- a/app/src/main/res/layout/item_share_request.xml
+++ b/app/src/main/res/layout/item_share_request.xml
@@ -16,7 +16,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/deviceTextView"
         android:layout_width="0dp"
@@ -27,8 +26,7 @@
         android:layout_marginStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/downloadIcon"
-        app:layout_constraintTop_toTopOf="parent"
-       />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/deleteButton"
@@ -42,18 +40,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp" />
 
-
     <TextView
         android:id="@+id/fileTypeTextView"
-        android:layout_width="0dp"
+        android:layout_width="171dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif"
         android:textAppearance="?attr/textAppearanceBody1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/deviceTextView"
+        app:layout_constraintTop_toBottomOf="@id/deviceTextView" />
+
+    <TextView
+        android:id="@+id/fileSizeTextView"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="6dp"
+        android:textSize="14sp"
+        android:gravity="end"
+        app:layout_constraintStart_toEndOf="@id/fileTypeTextView"
         app:layout_constraintTop_toBottomOf="@id/deviceTextView" />
 
     <TextView
