--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="24dp"
     android:gravity="center_horizontal">
@@ -58,19 +58,21 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">
-        <TextView
-            android:id="@+id/forgotPasswordButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:paddingEnd="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="Forgot Password?"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/forgotPasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="-4dp"
+                android:layout_marginRight="-4dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:paddingEnd="8dp"
+                android:text="Forgot Password?"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
         </RelativeLayout>
 
     <!-- Login Button -->
@@ -95,4 +97,14 @@
         android:textColor="@android:color/white"
         android:layout_gravity="center" />
 
+    <Button
+        android:id="@+id/resendVerificationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Resend Verification Email"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </LinearLayout>
