--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,14 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/hamburgerButton"
+            android:id="@+id/settingsButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:padding="0dp"
             android:background="@color/fui_transparent"
-            android:src="@drawable/hamburger"
+            android:src="@drawable/settings"
             android:contentDescription="View settings and history"/>
 
         <LinearLayout
@@ -31,17 +31,17 @@
             android:gravity="end"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/notificationButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+<!--            <ImageButton-->
+<!--                android:id="@+id/notificationButton"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
 
-                android:adjustViewBounds="true"
-                android:background="@color/fui_transparent"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/notificationbell"
-                android:contentDescription="View notifications"/>
+<!--                android:adjustViewBounds="true"-->
+<!--                android:background="@color/fui_transparent"-->
+<!--                android:padding="5dp"-->
+<!--                android:scaleType="fitCenter"-->
+<!--                android:src="@drawable/notificationbell"-->
+<!--                android:contentDescription="View notifications"/>-->
         </LinearLayout>
     </LinearLayout>
 
@@ -52,11 +52,11 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/welcomeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:text="@string/welcome_back"
