--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -10,12 +10,13 @@
         android:id="@+id/receivePageIcon"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_gravity="center"
         android:src="@drawable/skyfall_logo"
         android:contentDescription="@string/receive_page_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="20dp" />
 
 
     <TextView
@@ -23,13 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/receive_page_title"
-        android:textAppearance="?attr/textAppearanceHeadline4"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/receivePageIcon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
     <TextView
         android:id="@+id/noRequestsTextView"
         android:layout_width="wrap_content"
